--- a/jenkins_deploy.yaml
+++ b/jenkins_deploy.yaml
@@ -42,7 +42,8 @@ spec:
   ports:
   - port: 5000
     protocol: TCP
-    targetPort: 5000
+    nodePort : 5000
+ //   targetPort: 5000
   selector:
     app: hello
   type: NodePort
