--- a/jenkins_deploy.yaml
+++ b/jenkins_deploy.yaml
@@ -43,7 +43,7 @@ spec:
   - port: 5000
     protocol: TCP
     nodePort : 5000
- //   targetPort: 5000
+    targetPort: 5000
   selector:
     app: hello
   type: NodePort
